# HydraPFN

./: .gitignore  Dockerfile  LICENSE.txt  README.md  continue_training_hydra.py  evaluate_hydra.py  hydra_evaluation_helper.py  hydrapfn_evaluation.py  inference_times.py  pyproject.toml  requirements.txt  setup.sh  tabarena.py  tabpfn_original_config.json  train_custom_model.py  train_hydra.py
hydra/: LICENSE.txt  __init__.py
hydra/bert/: README.md  __init__.py  glue.py  main.py  requirements-cpu.txt  requirements.txt
hydra/modules/: __init__.py  hydra.py  matrix_mixer.py  ops.py
hydrapfn/: bimamba_icl.py  encoders.py  hydra_context.py  hydra_full.py  hydra_icl.py  hydra_old.py  hydrapfn.py  train.py  utils.py
hydrapfn/datasets/: __init__.py  utils.py
hydrapfn/eval_bench/: eval_tabarena.py
hydrapfn/priors/: differentiable_prior.py  fast_gp.py  flexible_categorical.py  mlp.py  prior_bag.py  utils.py
hydrapfn/scripts/: eval_helper.py  hydra_prediction_interface.py  model_loader.py  model_saver.py  model_trainer.py  tabarena_evaluator.py  tabular_baselines.py  tabular_evaluation.py  tabular_metrics.py
hydrapfn/tabicl_embedding/: LICENSE  attention.py  embedding.py  encoders.py  inference.py  inference_config.py  interaction.py  kv_cache.py  layers.py  learning.py  quantile_dist.py  rope.py  ssmax.py
hydrapfn/tabicl_prior/: __init__.py  activations.py  dataset.py  genload.py  hp_sampling.py  mlp_scm.py  reg2cls.py  tree_scm.py  utils.py  wrapper.py
scripts/: data_generation.py
ssd/: README.md  modules.py
ssd/bi/: selective_state_update.py  ssd_chunk_scan.py  ssd_chunk_state.py  ssd_combined.py  ssd_state_passing.py
tabpfn/: LICENSE.txt  PrepareDatasets.ipynb  PriorFittingCustomPrior.ipynb  QuickPredictionDemo.ipynb  RunFullDatasetAnalyses.ipynb  __init__.py  custom_train.py  decoders.py  encoders.py  hydra.py  initializers.py  layer.py  losses.py  mamba.py  model_configs.py  notebook_utils.py  positional_encodings.py  train.py  transformer.py  utils.py
(+76 files in other folders)
